Explosion of SnowSpider crystal Color for SnowArmy hediff SnowArmy bucher bioferrite instead of killed Decrease stats of SnowSpider Adjusted SnowArmy ThinkTrees Organize comps

--- a/Source/Anomalies Expected/Anomalies Expected.csproj
+++ b/Source/Anomalies Expected/Anomalies Expected.csproj
@@ -40,7 +40,10 @@
     <Compile Include="Alert_ChristmasTreeUnstable.cs" />
     <Compile Include="Building\Building_AEChristmasGiftBox.cs" />
     <Compile Include="Building\Building_AEChristmasTreeExit.cs" />
-    <Compile Include="Comp\HediffComp_SnowArmy.cs" />
+    <Compile Include="CompProperties\CompProperties_AbilityEffect\CompProperties_AbilityIceCrystalDistabilization.cs" />
+    <Compile Include="Comp\CompAbilityEffect\CompAbilityEffect_IceCrystalDistabilization.cs" />
+    <Compile Include="Comp\HediffComp\HediffComp_ActivateAbilityOnRemoved.cs" />
+    <Compile Include="Comp\HediffComp\HediffComp_SnowArmy.cs" />
     <Compile Include="DefOfLocal\FactionDefOfLocal.cs" />
     <Compile Include="DefOfLocal\FleshTypeDefOfLocal.cs" />
     <Compile Include="MapComponent\ChristmasTreeMapComponent.cs" />
@@ -59,27 +62,27 @@
     <Compile Include="GenStep\GenStep_ChristmasTreeTerrain.cs" />
     <Compile Include="GenStep\GenStep_ChristmasTreeFindExit.cs" />
     <Compile Include="Thing\ThingWithComps_AE.cs" />
-    <Compile Include="CompProperties\CompProperties_AbilityFleshmassStomach.cs" />
-    <Compile Include="CompProperties\CompProperties_ChristmasStockings.cs" />
-    <Compile Include="CompProperties\CompProperties_StudyNotepad.cs" />
-    <Compile Include="Comp\CompAbilityEffect_FleshmassStomach.cs" />
-    <Compile Include="Comp\Comp_ChristmasStockings.cs" />
-    <Compile Include="Comp\Comp_StudyNotepad.cs" />
-    <Compile Include="Comp\HediffComp_FleshmassRestoration.cs" />
+    <Compile Include="CompProperties\CompProperties_AbilityEffect\CompProperties_AbilityFleshmassStomach.cs" />
+    <Compile Include="CompProperties\CompProperties_Interactable\CompProperties_ChristmasStockings.cs" />
+    <Compile Include="CompProperties\CompProperties_Interactable\CompProperties_StudyNotepad.cs" />
+    <Compile Include="Comp\CompAbilityEffect\CompAbilityEffect_FleshmassStomach.cs" />
+    <Compile Include="Comp\CompInteractable\Comp_ChristmasStockings.cs" />
+    <Compile Include="Comp\CompInteractable\Comp_StudyNotepad.cs" />
+    <Compile Include="Comp\HediffComp\HediffComp_FleshmassRestoration.cs" />
     <Compile Include="DefOfLocal\BodyPartDefOfLocal.cs" />
     <Compile Include="HarmonyPatches.cs" />
-    <Compile Include="CompProperties\CompProperties_AbilityFleshbeastCommand.cs" />
-    <Compile Include="CompProperties\CompProperties_AbilitySpawnFleshbeast.cs" />
-    <Compile Include="CompProperties\CompProperties_AbilitySpewLiquid.cs" />
+    <Compile Include="CompProperties\CompProperties_AbilityEffect\CompProperties_AbilityFleshbeastCommand.cs" />
+    <Compile Include="CompProperties\CompProperties_AbilityEffect\CompProperties_AbilitySpawnFleshbeast.cs" />
+    <Compile Include="CompProperties\CompProperties_AbilityEffect\CompProperties_AbilitySpewLiquid.cs" />
     <Compile Include="CompProperties\CompProperties_AEFleshmassSpitter.cs" />
-    <Compile Include="CompProperties\CompProperties_AbilitySpitLiquid.cs" />
-    <Compile Include="CompProperties\HediffCompProperties_FleshmassMutation.cs" />
-    <Compile Include="CompProperties\HediffCompProperties_SpawnThingOnDeath.cs" />
-    <Compile Include="CompProperties\HediffCompProperties_FleshbeastEmergeOnStage.cs" />
-    <Compile Include="CompProperties\CompProperties_UseEffectBloodLiquidInjector.cs" />
-    <Compile Include="Comp\CompAbilityEffect_SpawnFleshbeast.cs" />
-    <Compile Include="Comp\CompAbilityEffect_SpewLiquid.cs" />
-    <Compile Include="Comp\CompAbilityEffect_FleshbeastCommand.cs" />
+    <Compile Include="CompProperties\CompProperties_AbilityEffect\CompProperties_AbilitySpitLiquid.cs" />
+    <Compile Include="CompProperties\HediffCompProperties\HediffCompProperties_FleshmassMutation.cs" />
+    <Compile Include="CompProperties\HediffCompProperties\HediffCompProperties_SpawnThingOnDeath.cs" />
+    <Compile Include="CompProperties\HediffCompProperties\HediffCompProperties_FleshbeastEmergeOnStage.cs" />
+    <Compile Include="CompProperties\CompProperties_UseEffect\CompProperties_UseEffectBloodLiquidInjector.cs" />
+    <Compile Include="Comp\CompAbilityEffect\CompAbilityEffect_SpawnFleshbeast.cs" />
+    <Compile Include="Comp\CompAbilityEffect\CompAbilityEffect_SpewLiquid.cs" />
+    <Compile Include="Comp\CompAbilityEffect\CompAbilityEffect_FleshbeastCommand.cs" />
     <Compile Include="Comp\CompApplyUsableTo.cs" />
     <Compile Include="Comp\CompTargetable_SinglePawnUseFirstEffect.cs" />
     <Compile Include="MapComponent\BloodLakeMapComponent.cs" />
@@ -92,18 +95,18 @@
     <Compile Include="CompProperties\CompProperties_BloodSource.cs" />
     <Compile Include="CompProperties\CompProperties_BloodPump.cs" />
     <Compile Include="CompProperties\CompProperties_ApplyUsableTo.cs" />
-    <Compile Include="CompProperties\CompProperties_DogTag.cs" />
-    <Compile Include="Comp\CompUseEffect_BloodLiquidInjector.cs" />
-    <Compile Include="Comp\CompAbilityEffect_SpitLiquid.cs" />
+    <Compile Include="CompProperties\CompProperties_Interactable\CompProperties_DogTag.cs" />
+    <Compile Include="Comp\CompUseEffect\CompUseEffect_BloodLiquidInjector.cs" />
+    <Compile Include="Comp\CompAbilityEffect\CompAbilityEffect_SpitLiquid.cs" />
     <Compile Include="Comp\Comp_AEFleshmassSpitter.cs" />
-    <Compile Include="Comp\HediffComp_FleshbeastEmergeOnStage.cs" />
-    <Compile Include="Comp\HediffComp_WoundClotting.cs" />
-    <Compile Include="Comp\HediffComp_SpawnThingOnDeath.cs" />
-    <Compile Include="Comp\HediffComp_FleshmassMutation.cs" />
+    <Compile Include="Comp\HediffComp\HediffComp_FleshbeastEmergeOnStage.cs" />
+    <Compile Include="Comp\HediffComp\HediffComp_WoundClotting.cs" />
+    <Compile Include="Comp\HediffComp\HediffComp_SpawnThingOnDeath.cs" />
+    <Compile Include="Comp\HediffComp\HediffComp_FleshmassMutation.cs" />
     <Compile Include="Comp\Comp_BloodLakeTerminal.cs" />
     <Compile Include="Comp\Comp_BloodSource.cs" />
     <Compile Include="Comp\Comp_BloodPump.cs" />
-    <Compile Include="Comp\Comp_DogTag.cs" />
+    <Compile Include="Comp\CompInteractable\Comp_DogTag.cs" />
     <Compile Include="DamageWorker\DamageWorker_PsychicFlash.cs" />
     <Compile Include="DefOfLocal\GameConditionDefOfLocal.cs" />
     <Compile Include="DefOfLocal\IncidentDefOfLocal.cs" />
@@ -124,10 +127,10 @@
     <Compile Include="PsychicRitual\PsychicRitualToil_AESummonBloodLake.cs" />
     <Compile Include="PsychicRitual\PsychicRitualDef_AESummonBloodLake.cs" />
     <Compile Include="Structures\AEStudyNote.cs" />
-    <Compile Include="CompProperties\CompProperties_CanDestroyedAfterStudy.cs" />
-    <Compile Include="CompProperties\CompProperties_UseEffecRemoveHediff.cs" />
-    <Compile Include="Comp\CompUseEffect_RemoveHediff.cs" />
-    <Compile Include="Comp\Comp_CanDestroyedAfterStudy.cs" />
+    <Compile Include="CompProperties\CompProperties_Interactable\CompProperties_CanDestroyedAfterStudy.cs" />
+    <Compile Include="CompProperties\CompProperties_UseEffect\CompProperties_UseEffecRemoveHediff.cs" />
+    <Compile Include="Comp\CompUseEffect\CompUseEffect_RemoveHediff.cs" />
+    <Compile Include="Comp\CompInteractable\Comp_CanDestroyedAfterStudy.cs" />
     <Compile Include="DefOfLocal\SoundDefOfLocal.cs" />
     <Compile Include="DefOfLocal\ThingDefOfLocal.cs" />
     <Compile Include="Thing\AEPowerBeam.cs" />
@@ -145,30 +148,30 @@
     <Compile Include="Thing\MinifiedThing_AE.cs" />
     <Compile Include="Building\Building_AE.cs" />
     <Compile Include="Building\Building_AEBed.cs" />
-    <Compile Include="CompProperties\CompProperties_BeamTarget.cs" />
-    <Compile Include="CompProperties\CompProperties_MeatGrinder.cs" />
-    <Compile Include="CompProperties\CompProperties_BakingPies.cs" />
-    <Compile Include="CompProperties\CompProperties_UseEffectAddMentalState.cs" />
-    <Compile Include="CompProperties\CompProperties_UseEffectReplaceHediff.cs" />
+    <Compile Include="CompProperties\CompProperties_Interactable\CompProperties_BeamTarget.cs" />
+    <Compile Include="CompProperties\CompProperties_Interactable\CompProperties_MeatGrinder.cs" />
+    <Compile Include="CompProperties\CompProperties_Interactable\CompProperties_BakingPies.cs" />
+    <Compile Include="CompProperties\CompProperties_UseEffect\CompProperties_UseEffectAddMentalState.cs" />
+    <Compile Include="CompProperties\CompProperties_UseEffect\CompProperties_UseEffectReplaceHediff.cs" />
     <Compile Include="Comp\CompAEStudyUnlocks.cs" />
     <Compile Include="CompProperties\CompProperties_AnomalyHospitalBed.cs" />
     <Compile Include="CompProperties\CompProperties_AnomalyBed.cs" />
     <Compile Include="Comp\CompStudiableAE.cs" />
-    <Compile Include="Comp\CompUseEffect_UseEffectAddMentalState.cs" />
-    <Compile Include="Comp\Comp_BeamTarget.cs" />
-    <Compile Include="Comp\Comp_BakingPies.cs" />
-    <Compile Include="Comp\Comp_MeatGrinder.cs" />
-    <Compile Include="Comp\Comp_ForbiddenFruit.cs" />
+    <Compile Include="Comp\CompUseEffect\CompUseEffect_UseEffectAddMentalState.cs" />
+    <Compile Include="Comp\CompInteractable\Comp_BeamTarget.cs" />
+    <Compile Include="Comp\CompInteractable\Comp_BakingPies.cs" />
+    <Compile Include="Comp\CompInteractable\Comp_MeatGrinder.cs" />
+    <Compile Include="Comp\CompInteractable\Comp_ForbiddenFruit.cs" />
     <Compile Include="Comp\Comp_AnomalyHospitalBed.cs" />
     <Compile Include="Comp\Comp_AnomalyBed.cs" />
     <Compile Include="DefOfLocal\HediffDefOfLocal.cs" />
     <Compile Include="DefOfLocal\ThingCategoryDefOfLocal.cs" />
     <Compile Include="DefOfLocal\SpecialThingFilterDefOfLocal.cs" />
-    <Compile Include="IncidentWorker\IncidentDefExtension.cs" />
+    <Compile Include="DefModExtension\IncidentDefExtension.cs" />
     <Compile Include="JobDriver\JobDriver_CalledMeatGrinder.cs" />
     <Compile Include="IncidentWorker\IncidentWorker_DeployThingFromOrbit.cs" />
     <Compile Include="IncidentWorker\IncidentWorker_DeployFromOrbit.cs" />
-    <Compile Include="Comp\CompUseEffect_ReplaceHediff.cs" />
+    <Compile Include="Comp\CompUseEffect\CompUseEffect_ReplaceHediff.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Krafs.Rimworld.Ref">
