Nitrogen stuns turrets, slow down pawn and have increased dmg on powered buildings SnowSpider no longer trying dying after death

--- a/Source/Anomalies Expected/Anomalies Expected.csproj
+++ b/Source/Anomalies Expected/Anomalies Expected.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Comp\HediffComp\HediffComp_ActivateAbilityOnRemoved.cs" />
     <Compile Include="Comp\HediffComp\HediffComp_SnowArmy.cs" />
     <Compile Include="DefOfLocal\FactionDefOfLocal.cs" />
+    <Compile Include="DefOfLocal\DamageDefOfLocal.cs" />
     <Compile Include="DefOfLocal\FleshTypeDefOfLocal.cs" />
     <Compile Include="MapComponent\ChristmasTreeMapComponent.cs" />
     <Compile Include="Building\Building_AEBloodLake.cs" />
