--- a/Source/Anomalies Expected/Anomalies Expected.csproj
+++ b/Source/Anomalies Expected/Anomalies Expected.csproj
@@ -43,6 +43,7 @@
     <Compile Include="CompProperties\CompProperties_AbilityEffect\CompProperties_AbilityIceCrystalDistabilization.cs" />
     <Compile Include="Comp\CompAbilityEffect\CompAbilityEffect_IceCrystalDistabilization.cs" />
     <Compile Include="Comp\HediffComp\HediffComp_ActivateAbilityOnRemoved.cs" />
+    <Compile Include="Comp\HediffComp\HediffComp_SnowBlockCompressor.cs" />
     <Compile Include="Comp\HediffComp\HediffComp_SnowArmy.cs" />
     <Compile Include="DefOfLocal\FactionDefOfLocal.cs" />
     <Compile Include="DefOfLocal\DamageDefOfLocal.cs" />
