Added Gizmo of DB to each object with Codex gizmo Can add Gizmo of DB to things without EntityCodexEntry Remade ChoiceLetter_EntityDiscovered to work with DB and hidden projects

--- a/Source/Anomalies Expected/Anomalies Expected.csproj
+++ b/Source/Anomalies Expected/Anomalies Expected.csproj
@@ -38,6 +38,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AEDebugTools.cs" />
+    <Compile Include="Comp\Comp_EntityDataBaseAccess.cs" />
     <Compile Include="DefModExtension\EntityCodexEntryDefExtension.cs" />
     <Compile Include="Dialog_AEEntityDB.cs" />
     <Compile Include="GameComponent_AnomaliesExpected.cs" />
