--- a/Source/Anomalies Expected/Anomalies Expected.csproj
+++ b/Source/Anomalies Expected/Anomalies Expected.csproj
@@ -55,6 +55,7 @@
     <Compile Include="DefOfLocal\DamageDefOfLocal.cs" />
     <Compile Include="DefOfLocal\FleshTypeDefOfLocal.cs" />
     <Compile Include="IncidentWorker\IncidentWorker_EntityAssault.cs" />
+    <Compile Include="MapComponent\SnowArmyMapComponent.cs" />
     <Compile Include="MapComponent\ChristmasTreeMapComponent.cs" />
     <Compile Include="Building\Building_AEBloodLake.cs" />
     <Compile Include="Comp\Comp_AtmosphericController.cs" />
