--- a/Source/Anomalies Expected/Anomalies Expected.csproj
+++ b/Source/Anomalies Expected/Anomalies Expected.csproj
@@ -71,6 +71,8 @@
     <Compile Include="GenStep\GenStep_ChristmasTreeGiftBoxes.cs" />
     <Compile Include="GenStep\GenStep_ChristmasTreeTerrain.cs" />
     <Compile Include="GenStep\GenStep_ChristmasTreeFindExit.cs" />
+    <Compile Include="PsychicRitual\PsychicRitualDef_AESummonSnowArmy.cs" />
+    <Compile Include="PsychicRitual\PsychicRitualToil_AESummonSnowArmy.cs" />
     <Compile Include="Structures\Enum\BeamTargetState.cs" />
     <Compile Include="Structures\AEEntityEntry.cs" />
     <Compile Include="Thing\ThingWithComps_AE.cs" />
