--- a/Source/Anomalies Expected/Anomalies Expected.csproj
+++ b/Source/Anomalies Expected/Anomalies Expected.csproj
@@ -40,6 +40,7 @@
     <Compile Include="AEDebugTools.cs" />
     <Compile Include="Comp\Comp_EntityDataBaseAccess.cs" />
     <Compile Include="Comp\HediffComp\HediffComp_FreezingFragile.cs" />
+    <Compile Include="Comp\HediffComp\HediffComp_IceThinBody.cs" />
     <Compile Include="DamageWorker\DamageWorker_FreezingFragile.cs" />
     <Compile Include="DefModExtension\EntityCodexEntryDefExtension.cs" />
     <Compile Include="Dialog_AEEntityDB.cs" />
