Now MeatGrinder will decrease mood, when isolated

--- a/Source/Anomalies Expected/Anomalies Expected.csproj
+++ b/Source/Anomalies Expected/Anomalies Expected.csproj
@@ -161,6 +161,7 @@
     <Compile Include="Structures\BloodLakeSummonPattern.cs" />
     <Compile Include="Structures\BloodLakeSummonHistory.cs" />
     <Compile Include="DamageWorker\DamageWorker_AddInjuryFleshmass.cs" />
+    <Compile Include="Thought_AEMemory.cs" />
     <Compile Include="Verb_AEPowerBeam.cs" />
     <Compile Include="PlaceWorker\PlaceWorker_ShowBeamTargetRadius.cs" />
     <Compile Include="Thing\MinifiedThing_AE.cs" />
