--- a/Source/Anomalies Expected/Anomalies Expected.csproj
+++ b/Source/Anomalies Expected/Anomalies Expected.csproj
@@ -77,7 +77,9 @@
     <Compile Include="GenStep\GenStep_ChristmasTreeTerrain.cs" />
     <Compile Include="GenStep\GenStep_ChristmasTreeFindExit.cs" />
     <Compile Include="Hediff_SpeedometerLevel.cs" />
+    <Compile Include="PsychicRitual\PsychicRitualDef_AEConnectEntityDatabase.cs" />
     <Compile Include="PsychicRitual\PsychicRitualDef_AESummonSnowArmy.cs" />
+    <Compile Include="PsychicRitual\PsychicRitualToil_AEConnectEntityDatabase.cs" />
     <Compile Include="PsychicRitual\PsychicRitualToil_AESummonSnowArmy.cs" />
     <Compile Include="Structures\AssaultSummonPattern.cs" />
     <Compile Include="Structures\Enum\BeamTargetState.cs" />
