Creade universal IncidentWorker_AE for inheritance Added incident for spawn with Skip effect

--- a/Source/Anomalies Expected/Anomalies Expected.csproj
+++ b/Source/Anomalies Expected/Anomalies Expected.csproj
@@ -60,6 +60,8 @@
     <Compile Include="DefOfLocal\FactionDefOfLocal.cs" />
     <Compile Include="DefOfLocal\DamageDefOfLocal.cs" />
     <Compile Include="DefOfLocal\FleshTypeDefOfLocal.cs" />
+    <Compile Include="IncidentWorker\IncidentWorker_AE.cs" />
+    <Compile Include="IncidentWorker\IncidentWorker_DeployThingWithSkip.cs" />
     <Compile Include="IncidentWorker\IncidentWorker_EntityAssault.cs" />
     <Compile Include="MapComponent\SnowArmyMapComponent.cs" />
     <Compile Include="MapComponent\ChristmasTreeMapComponent.cs" />
