--- a/Source/Anomalies Expected/Anomalies Expected.csproj
+++ b/Source/Anomalies Expected/Anomalies Expected.csproj
@@ -38,6 +38,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AEDebugTools.cs" />
+    <Compile Include="Designator_CaptureEntity.cs" />
     <Compile Include="CompProperties\CompProperties_AbilityEffect\CompProperties_AbilitySpawnSummon.cs" />
     <Compile Include="CompProperties\CompProperties_AbilityEffect\CompProperties_AbilitySpawnSnowArmy.cs" />
     <Compile Include="CompProperties\CompProperties_Interactable\CompProperties_BirthdayCake.cs" />
@@ -47,6 +48,7 @@
     <Compile Include="Comp\CompInteractable\Comp_BirthdayCake.cs" />
     <Compile Include="Comp\HediffComp\HediffComp_SpawnPawnOnDeath.cs" />
     <Compile Include="DefModExtension\CreepJoinerDefExtension.cs" />
+    <Compile Include="DefOfLocal\DesignationDefOfLocal.cs" />
     <Compile Include="QuestNode_Root_AEMysteriousCargo.cs" />
     <Compile Include="CompProperties\CompProperties_EntityDatabaseAnomaly.cs" />
     <Compile Include="Comp\Comp_EntityDatabaseAnomaly.cs" />
