--- a/Source/Anomalies Expected/Anomalies Expected.csproj
+++ b/Source/Anomalies Expected/Anomalies Expected.csproj
@@ -40,6 +40,7 @@
     <Compile Include="AEDebugTools.cs" />
     <Compile Include="CompProperties\CompProperties_AbilityEffect\CompProperties_AbilityGrindBody.cs" />
     <Compile Include="Comp\CompAbilityEffect\CompAbilityEffect_GrindBody.cs" />
+    <Compile Include="CreepJoinerWorker_AEDownsideMentalState.cs" />
     <Compile Include="Designator_CaptureEntity.cs" />
     <Compile Include="CompProperties\CompProperties_AbilityEffect\CompProperties_AbilitySpawnSummon.cs" />
     <Compile Include="CompProperties\CompProperties_AbilityEffect\CompProperties_AbilitySpawnSnowArmy.cs" />
