--- a/Source/Anomalies Expected/Anomalies Expected.csproj
+++ b/Source/Anomalies Expected/Anomalies Expected.csproj
@@ -232,7 +232,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Krafs.Rimworld.Ref">
-      <Version>1.6.4497-beta</Version>
+      <Version>1.6.4523</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup />
